schema/testdata/validation_read_write_in_operation/schema.keel
message Foo {
  bar Text
}

message Bar {
  baz Text
}

model Person {
  operations {
    read getPerson()
    write updatePerson(Foo)
    read getPersonWithReturns() returns(Bar)
    write updatePersonWithReturns() returns(Bar)
  }
}