schema/testdata/errors/read_write_in_operation.keel
message Foo {
    bar Text
}

message Bar {
    baz Text
}

model Person {
    actions {
        //expect-error:14:23:TypeError:The 'returns' keyword must be specified when using a 'read' or 'write' action type
        //expect-error:9:25:ActionInputError:read and write functions must return exactly one message-based response
        read getPerson()
        //expect-error:15:27:TypeError:The 'returns' keyword must be specified when using a 'read' or 'write' action type
        //expect-error:9:32:ActionInputError:read and write functions must return exactly one message-based response
        write updatePerson(Foo)
        read getPersonWithReturns() returns (Bar)
        write updatePersonWithReturns() returns (Bar)
    }
}
